c notes, fixed javafx css, ooa notes, ldsa notes. NOTE: migrating many ldsa notes to annotated pages on tablet, will port over

--- a/y2s2/assignments/javafxassignment1/src/main/resources/com/example/javafxassignment1/styles.css
+++ b/y2s2/assignments/javafxassignment1/src/main/resources/com/example/javafxassignment1/styles.css
@@ -1,5 +1,16 @@
-.root {
-    -fx-font-size: 14px;
-    -fx-font-family: sans-serif;
-    -fx-background-color: #ffffff;
+.button{
+    -fx-background-color: grey;
+    -fx-text-fill: white;
+}
+
+.label{
+    -fx-font-family: "DejaVu Sans Mono";
+    -fx-font-size: var(12);
+}
+
+.root{
+    -fx-background-image: url(minecraft.jpg);
+    -fx-background-repeat: no-repeat;
+    -fx-background-size: 750 750;
+    -fx-background-position: center center;
 }
